# Go-Ahead

./: .gitignore  70.c  CMakeLists.txt  README.md  launcher.c
assets/: egg01.txt  egg02.txt
binaries/: 70
binaries/urb/: core32  core64
splashes/: main.txt  qr.txt  splash.txt
